# Night

./: .clang-format  .gitignore  BUILD.gn  Makefile  README.md
.github/workflows/: main.yml
docs/: BUILDING.md
extra/: grub.cfg  kernel.conf  mkintrid.py
kernel/: BUILD.gn  Kernel.mk  kernel  link.ld
kernel/include/: kernel.h  multiboot.h  system.h  timer.h
kernel/include/cpu/: irq.h  isr.h  regs.h  tables.h
kernel/include/drivers/: kb.h  scrn.h  timer.h
kernel/include/fs/: fs.h
kernel/include/fs/drivers/: intrid.h
kernel/include/fs/tar/: tar.h
kernel/include/mm/: alloc.h  heap.h  list.h  paging.h  pmm.h  vmm.h
kernel/src/cpu/: gdt.c  idt.c  irq.c  isr.c
kernel/src/drivers/: kb.c  scrn.c  timer.c
kernel/src/fs/: fs.c
kernel/src/fs/drivers/: intrid.c
kernel/src/fs/tar/: tar.c
kernel/src/kernel/: kernel.c  start.s
kernel/src/mm/: alloc.c  heap.c  paging.c  pmm.c  vmm.c
lib/include/liballoc/: alloc.h
lib/include/libk/: memory.h  panic.h  print.h  string.h  types.h
lib/liballoc/: BUILD.gn
lib/liballoc/src/: hooks.c  liballoc.c
lib/libk/: BUILD.gn  libk.mk
lib/libk/include/: memory.h  types.h
lib/libk/src/: memory.c  panic.c  printf.c  string.c
tools/: builder.py  intrid_tool.c
