import("//build/imports.gni")

config("lib") {
  cflags = ["-fno-PIC", "-m32", "-Wall", "-O0", "-fstrength-reduce", "-fomit-frame-pointer", "-finline-functions", "-nostdinc", "-fno-builtin", "-nostdlib"]
  if(is_debug) {
    cflags += ["-g"]
  } else {
    cflags += ["-O3", "-s"]
  }
}

config("krnl") {
  cflags = ["-fno-PIC", "-m32", "-Wall", "-O0", "-fstrength-reduce", "-fomit-frame-pointer", "-finline-functions", "-nostdinc", "-fno-builtin", "-nostdlib"]
  if(is_debug) {
    cflags += ["-g"]
  }
  if(use_initrd) {
    defines = ["USE_INITRD"]
    exec_script("//extra/mkintrid.py", ["//extra/kernel.conf"])
  }
}

group("all") {
  deps = ["//kernel:kernel"]
  if(use_initrd) {
    deps += ["//kernel:initrd"]
  }
}