copy("linkscript") {
  sources = ["link.ld"]
  outputs = [ "$root_build_dir/link.ld" ]
}

copy("initrd") {
  sources = ["//extra/kernel.conf"]
  outputs = ["$root_build_dir/kernel.conf"]
}

import("//build/imports.gni")

executable("kernel") {
  deps = []
  sources = [
    "src/kernel/kernel.c",
    "src/cpu/gdt.c",
    "src/cpu/idt.c",
    "src/cpu/irq.c",
    "src/cpu/isr.c",
    "src/drivers/timer.c",
    "src/drivers/kb.c",
    "src/drivers/scrn.c",
    "src/mm/paging.c",
    "src/mm/pmm.c",
    "src/fs/fs.c",
    "src/fs/tar/tar.c",
    "src/kernel/start.s"
  ]
  configs = ["//:krnl"]
  ldflags = ["-melf_i386",  "-T", "link.ld"]
  include_dirs = ["include", "../lib/include"]
  deps += ["//lib/libk:libk", ":linkscript", "//lib/liballoc:liballoc"]
}

  